css/styles.css
html {
	box-sizing: border-box;
}

html,
body {
	height: 100%;
}
*,
*:before,
*:after {
	box-sizing: inherit;
}

* {
	margin: 0;
	padding: 0;
}

/* General CSS */
.icon {
	overflow: visible;
}
.d-flex {
	display: flex;
	align-items: center;
}
body {
	font-family: 'Lato', sans-serif;
	--main-bg-color: #0b132b;
	--secondary-bg-color: #3a506b;
	--highlight-color: #5bc0be;
	z-index: 1;
	background: #fff;
	color: rgb(146, 146, 146);
}
.heading {
	margin-left: 15px;
	color: #000;
}
.pt-1half {
	padding-top: 1.5em;
}
.pb-3 {
	padding-bottom: 3em;
}
/* Layout */

/* GRID CSS */
.container {
	box-sizing: border-box;
	display: -ms-grid;
	display: grid;
	width: 100%;
	height: 100%;
	grid-template-areas:
		'header header'
		'sidebar main';
	grid-template-columns: 70px 1fr;
	-ms-grid-columns: 70px 1fr;
	grid-template-rows: 150px 1fr;
	-ms-grid-rows: 150px 1fr;
}
header {
	-ms-grid-row: 1;
	-ms-grid-column: 1;
	-ms-grid-column-span: 2;
	grid-row: 1;
	grid-column: 1;
	grid-row-start: 1;
	background: var(--secondary-bg-color);
	background: #3a506b;
	grid-area: header;
	text-align: center;
}

#sidebar {
	-ms-grid-row: 2;
	-ms-grid-column: 1;
	grid-row: 2;
	grid-column: 1;
	grid-area: sidebar;
}

main {
	-ms-grid-row: 2;
	-ms-grid-column: 2;
	grid-row: 2;
	grid-column: 2;
	grid-area: main;
}

/* Main Content */
.main-content-wrapper {
	max-width: 1200px;
	margin: 0 auto;
}
/* Header */

.main-nav {
	padding: 5px 10px;
}
.title {
	color: #fff;
	font-family: 'Righteous', cursive;
	text-shadow: 0px 0px 3px #1c2541;
	font-weight: 200;
}
.user-links {
	display: flex;
	align-items: center;
	justify-content: center;
}
.user-links .icon {
	border-right: 1px solid #1c2541;
	color: #fff;
	width: 50px;
	height: 35px;
	padding-right: 25px;
	margin-right: 10px;
}
.user--image {
	border-radius: 50%;
	height: auto;
	margin-right: 10px;
	width: 30px;
}

.user--name {
	font-family: 'Poiret One', cursive;
	color: #5bc0be;
	color: var(--highlight-color);
}

/* Sidebar */
#sidebar {
	width: 70px;
	background: var(--main-bg-color);
	background: #0b132b;
	flex-direction: column;
}

.sidebar-icons {
	width: 25px;
	height: 25px;
}

.active-icon {
	color: #fff;
}
.active-icon rect {
	color: #5bc0be;
	color: var(--highlight-color);
}
#sidebar svg:first-child {
	margin-top: 25px;
}
#sidebar svg:not(:first-child) {
	margin-top: 30px;
	color: #3a506b;
}

/* TOP */
#top {
	align-items: center;
	background-color: #f1f1f1;
	border: 1px solid #ccc;
	height: 40px;
	justify-content: space-between;
}
.top-title {
	background: #fff;
	border-right: 1px solid #ccc;
	font-family: 'Poiret one', sans-serif;
	cursor: pointer;
	font-size: 1.1em;
	padding: 10px 16px;
}
.searchbox {
	border-radius: 5px;
	background: #fff url('../svg/search.svg') right 11px center no-repeat;
	background-size: 10px;
	max-width: 225px;
	margin-left: 5px;
	margin-right: 10px;
	width: 50%;
	border: #ccc 1px solid;
}

::placeholder {
	color: #ccc;
	font-size: 11px;
	padding-left: 10px;
}
/* Demo Alert CSS */

.alert {
	background: var(--main-bg-color);
	background: #3a506b;
	color: #fff;
	border-radius: 5px;
	justify-content: space-between;
	margin: 10px auto 0 auto;
	padding: 9px 5px;
	width: 95%;
}
.alert p:not(b) {
	font-size: 0.7em;
}
.cancel {
	cursor: pointer;
	color: #fff;
	margin: 0 0.5em;
	fill: currentColor;
	transition: color ease-out 0.2s;
}
.cancel:hover {
	color: #000;
}
.bell {
	cursor: pointer;
	color: #fff;
}
.bell-icon {
	transform-origin: 50% 50%;
	transition: color ease-out 0.2s;
}
.bell:hover .bell-icon {
	color: var(--highlight-color);
	color: #5bc0be;
}

/* Chart styles */
.chart-container {
	width: 95%;
	margin: 25px auto 0 auto;
}
.chart-container h4 {
	color: #1c2541;
}
.chart-container canvas {
	margin: 0 auto;
	margin-top: 30px;
}
/* LineChart */

#web-traffic {
	border-bottom: 1px #ccc solid;
}
#lineChart {
	width: 100% !important;
	height: auto;
	max-width: 900px;
}
.lineChart-labels {
	justify-content: space-between;
}
.time-options {
	list-style-type: none;
}
.time-options li:not(:last-child) {
	margin-right: 1.5em;
}
.active {
	background: #5bc0be;
	color: white;
	padding: 5px;
	border-radius: 25px;
}

/* Pie and Bar */
#mobile-users,
#daily-traffic {
	border-bottom: 1px solid #ccc;
}
#daily-traffic {
	border-left: 1px solid #ccc;
}
.bar-and-pie {
	flex-direction: column;
	align-items: initial;
}
#barChart,
#pieChart {
}
/* Social */

.social-container {
  margin: 0 auto;
	justify-content: space-around;
}
.social-container svg {
  color: #fff;
  padding: 0 5px;
  transition:.2s ease-out;
	width: 70px;
}
.social-container {
	flex-direction: column;
}

div[class^='social-stats'] {
  background:rgb(241, 240, 240);
  border: 1px #ccc solid;
  border-radius:5px;
	color: #1c2541;
	padding: 25px 15px;
  justify-content: space-around;
  height:150px;
  max-width:400px;
  margin-bottom:25px;
  width: 80%;
}
.social-stats1 .stats-text{
  padding-right: 25px;
}
.stats-text {
	flex-direction: column;
	align-items: flex-start;
	align-content: space-between;
}
.stats-text h3 {
	margin-bottom: 25px;
}
/* Media Queries */
@media (min-width: 1024px) {
  .social-container svg{
    width:70px!important;
  }
}

@media (min-width: 768px) {
	#mobile-users,
	#daily-traffic {
		width: 50%;
		border-bottom: 0;
	}
	.bar-and-pie {
		flex-direction: row;
		align-items: center;
		border-bottom: 1px solid #ccc;
	}

	#daily-traffic {
		border-left: 0;
	}
	#mobile-users {
		border-left: 1px solid #ccc;
	}
	div[class^='social-stats'] {
		width: 30%;
	}
	.social-container {
		flex-direction: row;
  }
  .social-container svg{
    width:40px;
  }
}
/* Social */

@media (min-width: 512px) {
	.container {
		grid-template-rows: 75px 1fr !important;
		-ms-grid-rows: 75px 1fr !important;
	}

	.main-nav {
		align-items: center;
		display: flex;
		padding-top: 20px;
		justify-content: space-between;
	}

	.title {
		margin: 0;
	}
}

